compiler/testData/asJava/lightClasses/compilationErrors/ActualTypeAliasCustomJvmPackageName.kt
// a.b.c.ActualTypeAliasCustomJvmPackageNameKt
@file:JvmPackageName("a.b.c")
package p

actual typealias B = List<Int>